--- a/front-end/views/login.html
+++ b/front-end/views/login.html
@@ -71,7 +71,7 @@
           <div class="row">
             <div class="d-flex justify-content-end g-1">
               <p class="text-muted mx-2">Aun no tienes una cuenta?</p>
-              <a href="/autenticacion/registro" class="text-primary"
+              <a href="/registro" class="text-primary"
                 >Crea una cuenta</a
               >
             </div>
