--- a/front-end/views/registro_form_plantilla.html
+++ b/front-end/views/registro_form_plantilla.html
@@ -189,7 +189,7 @@
       <div class="row">
         <div class="d-flex justify-content-start g-1">
           <p class="text-muted mx-2">Ya tienes una cuenta?</p>
-          <a href="/autenticacion/login" class="text-primary">Inicia sesión</a>
+          <a href="/login" class="text-primary">Inicia sesión</a>
         </div>
       </div>
     </div>
